# euler-verifier

./: .env.example  .gitignore  .gitmodules  DOCUMENTATION_INDEX.md  FINDINGS.md  PYTHON_MIGRATION.md  QUICK_REFERENCE.md  README.md  SUCCESS_SUMMARY.md  VERIFICATION_GUIDE.md  networks.json  pyproject.toml  rpc_urls.json  verified_contracts.json  verify.py  verify_arbitrum.py  verify_avalanche.py  verify_base.py  verify_berachain.py  verify_bob.py  verify_bsc.py  verify_gnosis.py  verify_linea.py  verify_mainnet.py  verify_mainnet_focused.py  verify_networks.py  verify_optimism.py  verify_polygon.py  verify_sonic.py  verify_swell.py  verify_unichain.py
.github/workflows/: verify.yml
results/: README.md  arbitrum.md  arbitrum_test.md  avalanche.md  avalanche_test.md  base.md  base_test.md  berachain.md  berachain_test.md  bob.md  bob_test.md  bsc.md  bsc_test.md  gnosis.md  linea.md  linea_test.md  mainnet-focused-verification.md  mainnet.md  mainnet_test.md  monad.md  optimism.md  plasma.md  polygon.md  sonic.md  sonic_test.md  swell.md  swell_test.md  tac.md  unichain.md  unichain_test.md
verifier_lib/: __init__.py  addresses.py  cache.py  commits.py  comparator.py  config.py  discovery.py  report.py
verifier_lib/fetchers/: __init__.py  base.py  blockscout.py  etherscan.py  sourcify.py
