[project]
name = "euler-verifier"
version = "1.0.0"
description = "Verification suite for Euler protocol contracts across all networks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Euler Team" }
]
keywords = ["euler", "verification", "blockchain", "smart-contracts"]

dependencies = [
    "web3>=6.15.1",
    "requests>=2.31.0",
    "gitpython>=3.1.41",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verifier_lib"]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
